--- a/index.html
+++ b/index.html
@@ -1,12 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Интернет-магазин Техномарт</title>
+  <meta name="description" content="Интернет-магазин строительных материалов и инструментов для ремонта">
+  <meta name="keywords" content="инструменты для ремонта, перфораторы, строительные материалы">
+</head>
 
-  </body>
+<body>
+
+  <header>
+    <div>
+      <a>
+        <img src="img.logo.svg" alt="Логотип Техномарт" width="107" height="17">
+      </a>
+      <form action="#" method="POST">
+        <input type="search" placeholder="Поиск:">
+      </form>
+      <a href="#">Закладки: 0</a>
+      <a href="#">Корзина: 0</a>
+      <a href="#">Оформить заказ</a>
+    </div>
+
+    <div>
+      <h1>
+        Интернет-магазин
+        строительных материалов<br>
+        и инструментов для ремонта
+      </h1>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a href="#">Войти</a>
+      <a href="#">Регистрация</a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a>Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Тут будет Блок со слайдером -->
+    <!-- Тут будет Блок популярные товары -->
+    <!-- Тут будет Блок популярные производители -->
+    <!-- Тут будет Сервисы -->
+
+    <section>
+      <h2>Компания «Техномарт»</h2>
+      <p>
+        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+        ремонта и строительства не оставит равнодушными любителей сэкономить на
+        гастарбайтерах.
+      </p>
+      <p>
+        Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:
+      </p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="#">Подробнее о компании</a>
+    </section>
+
+    <section>
+      <h2>Контакты</h2>
+      <p>
+        Вы можете забрать товар сами,
+        заехав в наш офис:
+      </p>
+      <figure>
+        <a href="#">
+          <img src="map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
+        </a>
+      </figure>
+      <button type="button">Заблудились? НапиШИТЕ НАМ!</button>
+    </section>
+  </main>
+
+  <footer>
+    <div>
+      <div>
+        <img src="#" alt="Логотип Техномарт" width="137" height="22">
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div>
+      <div>
+        <p>© 2010–2019 Компания «Техномарт»</p>
+        <p>Все права защищены</p>
+      </div>
+      <div>
+        <a href="#">Вконтакте</a>
+        <a href="#">Фейсбук</a>
+        <a href="#">Инстаграмм</a>
+      </div>
+      <div>
+        <p>Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+      </div>
+      <div>
+        <p>Разработано —
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <div>
+    <!-- Здесь будет карта -->
+    <button type="button">Закрыть</button>
+  </div>
+
+  <div>
+    <!-- Здесь будет форма связи -->
+    <button type="button">Закрыть</button>
+  </div>
+
+</body>
+
 </html>
