Внесла изменения в index и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -89,97 +89,79 @@
 
     <ul>
       <li>
-        <article>
-          <img src="tovar-1.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <img src="tovar-1.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <img src="tovar-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <img src="tovar-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <span>New</span>
-          <img src="tovar-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <span>New</span>
+        <img src="tovar-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <span>New</span>
-          <img src="tovar-4.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <span>22500 Р.</span>
-          <span>15500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <span>New</span>
+        <img src="tovar-4.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+        <h3>Перфоратор BOSCH BFG 3000</h3>
+        <span>22500 Р.</span>
+        <span>15500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <img src="tovar-5.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <img src="tovar-5.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <span>New</span>
-          <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <span>12500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <span>New</span>
+        <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+        <h3>Перфоратор BOSCH BFG 2000</h3>
+        <span>12500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <span>New</span>
-          <img src="tovar-7.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <span>22500 Р.</span>
-          <span>15500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <span>New</span>
+        <img src="tovar-7.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+        <h3>Перфоратор BOSCH BFG 3000</h3>
+        <span>22500 Р.</span>
+        <span>15500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <img src="tovar-8.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <img src="tovar-8.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
       <li>
-        <article>
-          <span>New</span>
-          <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <span>12500 Р.</span>
-          <button type="submit">Купить</button>
-          <button type="submit">В закладки</button>
-        </article>
+        <span>New</span>
+        <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+        <h3>Перфоратор BOSCH BFG 2000</h3>
+        <span>12500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
       </li>
     </ul>
 
@@ -220,11 +202,11 @@
         <p>© 2010–2019 Компания «Техномарт»</p>
         <p>Все права защищены</p>
       </div>
-      <div>
-        <a href="#">Вконтакте</a>
-        <a href="#">Фейсбук</a>
-        <a href="#">Инстаграмм</a>
-      </div>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграмм</a></li>
+      </ul>
       <div>
         <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
