--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
 
     <div>
-      <h1>
+      <p>
         Интернет-магазин
         строительных материалов<br>
         и инструментов для ремонта
-      </h1>
+      </p>
       <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="#">Войти</a>
@@ -120,11 +120,11 @@
         <p>© 2010–2019 Компания «Техномарт»</p>
         <p>Все права защищены</p>
       </div>
-      <div>
-        <a href="#">Вконтакте</a>
-        <a href="#">Фейсбук</a>
-        <a href="#">Инстаграмм</a>
-      </div>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграмм</a></li>
+      </ul>
       <div>
         <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
