--- a/catalog.html
+++ b/catalog.html
@@ -63,29 +63,39 @@
     </div>
     <h1>Перфораторы</h1>
 
-    <form action="https://echo.htmlacademy.ru/" method="POST">
+    <div>
+      <span>Фильтр:</span>
 
-      <!-- Тут будет Фильтр по цене -->
+      <form action="https://echo.htmlacademy.ru/" method="POST">
 
-      <fieldset>
-        <legend>Производители</legend>
-        <label><input type="checkbox" name="firm" value="Bosch" checked>BOSCH</label>
-        <label><input type="checkbox" name="firm" value="Interskol">ИНТЕРСКОЛ</label>
-        <label><input type="checkbox" name="firm" value="Makita" checked>MAKIta</label>
-        <label><input type="checkbox" name="firm" value="Dewalt">Dewalt</label>
-        <label><input type="checkbox" name="firm" value="Hitachi">Hitachi</label>
-      </fieldset>
+        <!-- Тут будет Фильтр по цене -->
 
-      <fieldset>
-        <legend>Питание:</legend>
-        <label><input type="radio" name="charge" value="battery" checked>Аккумуляторные</label>
-        <label><input type="radio" name="charge" value="network">Сетевые</label>
-      </fieldset>
+        <fieldset>
+          <legend>Производители</legend>
+          <label><input type="checkbox" name="firm" value="Bosch" checked>BOSCH</label>
+          <label><input type="checkbox" name="firm" value="Interskol">ИНТЕРСКОЛ</label>
+          <label><input type="checkbox" name="firm" value="Makita" checked>MAKIta</label>
+          <label><input type="checkbox" name="firm" value="Dewalt">Dewalt</label>
+          <label><input type="checkbox" name="firm" value="Hitachi">Hitachi</label>
+        </fieldset>
 
-      <button type="submit">Показать</button>
-    </form>
+        <fieldset>
+          <legend>Питание:</legend>
+          <label><input type="radio" name="charge" value="battery" checked>Аккумуляторные</label>
+          <label><input type="radio" name="charge" value="network">Сетевые</label>
+        </fieldset>
 
-    <!-- Тут будет Сортировка -->
+        <button type="submit">Показать</button>
+      </form>
+    </div>
+    <div>
+      <span>Сортировка:</span>
+      <ul>
+        <li>По цене</li>
+        <li>По типу</li>
+        <li>По функционалу</li>
+      </ul>
+    </div>
 
     <ul>
       <li>
@@ -165,9 +175,22 @@
       </li>
     </ul>
 
-    <!-- Тут будет Переключатель страниц -->
+    <ul>
+      <li><a>1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">СЛЕДУЮЩАЯ</a></li>
+    </ul>
 
-    <!-- Тут будет Пара слов о перфораторах -->
+    <section>
+      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
+        бетоне и камне.</p>
+      <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
+        шуруповерта и отбойного молотка. </p>
+      <p>В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
+        ударная дрель.</p>
+    </section>
 
   </main>
 
