--- a/index.html
+++ b/index.html
@@ -50,10 +50,186 @@
   </header>
 
   <main>
-    <!-- Тут будет Блок со слайдером -->
-    <!-- Тут будет Блок популярные товары -->
-    <!-- Тут будет Блок популярные производители -->
-    <!-- Тут будет Сервисы -->
+    <h1>Интернет-магазин инструментов для ремонта, строительных материалов и техники для стройки</h1>
+    <!-- Cкрытый заголовок -->
+
+    <section>
+      <h2>Категории товаров</h2> <!-- Cкрытый заголовок -->
+      <ul>
+        <li>
+          <span>New</span>
+          Материалы
+          <a href="#">на любой вкус</a>
+        </li>
+        <li>
+          Инструмент
+          <a href="#">на все случаи</a>
+        </li>
+        <li>
+          Техника
+          <a href="#">для стройки</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <ul>
+        <li>
+          <h2>Перфораторы</h2>
+          <p>Настоящие мужские игрушки</p>
+          <a href="#">Открыть каталог</a>
+        </li>
+        <li>
+          <h2>Дрели</h2>
+          <p>Соседям на радость!</p>
+          <a href="#">Открыть каталог</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          Скидки 50%
+          <a href="#">На 350 ТОВАРОВ</a>
+        </li>
+        <li>
+          Доставка
+          <a href="#">Бесплатно</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Популярные товары:</h2>
+      <a href="#">все поПулярные товары</a>
+
+      <ul>
+        <li>
+          <img src="tovar-1.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164">
+          <h3>Перфоратор BOSCH BFG 9000</h3>
+          <span>32500 Р.</span>
+          <span>25500 Р.</span>
+          <button type="submit">Купить</button>
+          <button type="submit">В закладки</button>
+        </li>
+        <li>
+          <span>New</span>
+          <img src="tovar-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <span>22500 Р.</span>
+          <span>15500 Р.</span>
+          <button type="submit">Купить</button>
+          <button type="submit">В закладки</button>
+        </li>
+        <li>
+          <img src="tovar-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <span>30500 Р.</span>
+          <span>25500 Р.</span>
+          <button type="submit">Купить</button>
+          <button type="submit">В закладки</button>
+        </li>
+        <li>
+          <span>New</span>
+          <img src="tovar-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <span>12500 Р.</span>
+          <button type="submit">Купить</button>
+          <button type="submit">В закладки</button>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Популярные ПРОИзводители:</h2>
+      <a href="#">все производители</a>
+
+      <ul>
+        <li>
+          <a href="#">
+            <img src="bosch.png" alt="BOSCH" width="126" height="37">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="Makita.png" alt="Makita" width="123" height="40">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="Dewalt.png" alt="DeWALT" width="146" height="44">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="interskol.png" alt="Interskol" width="200" height="88">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="hitachi.png" alt="Hitachi" width="169" height="31">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="lg.png" alt="LG" width="121" height="73">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="aeg.png" alt="AEG" width="151" height="96">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="metabo.png" alt="Metabo" width="204" height="69">
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Сервисы</h2>
+      <p>
+        Хороший интернет-магазин отличается от плохого не только ценами!
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+      </p>
+
+      <ul>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Кредит</a></li>
+      </ul>
+
+      <ul>
+        <li>
+          <h2>Доставка</h2>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!
+          </p>
+        </li>
+        <li>
+          <h2>Гарантия</h2>
+          <p>
+            Если купленный у нас товар поломается или заискрит,<br>
+            а также в случае пожара, спровоцированного его возгоранием,
+            вы всегда можете быть уверены в нашей гарантии.
+            Мы обменяем сгоревший товар на новый.<br>
+            Дом уж восстановите как-нибудь сами.
+          </p>
+        </li>
+        <li>
+          <h2>Кредит</h2>
+          <p>
+            Залезть в долговую яму стало проще!<br>
+            Кредитные консультанты придут вам на помощь.
+          </p>
+          <button type="button">Отправить заявку</button>
+        </li>
+      </ul>
+    </section>
 
     <section>
       <h2>Компания «Техномарт»</h2>
