Добавила контентные изображения по заданию

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div>
       <a>
-        <img src="img.logo.svg" alt="Логотип Техномарт" width="107" height="17">
+        <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
       </a>
       <form action="#" method="POST">
         <input type="search" placeholder="Поиск:">
@@ -258,7 +258,7 @@
       </p>
       <figure>
         <a href="#">
-          <img src="map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
+          <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
         </a>
       </figure>
       <button type="button">Заблудились? НапиШИТЕ НАМ!</button>
@@ -268,7 +268,7 @@
   <footer>
     <div>
       <div>
-        <img src="#" alt="Логотип Техномарт" width="137" height="22">
+        <img src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
