--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <header>
     <div>
       <a href="/">
-        <img src="img.logo.svg" alt="Логотип Техномарт" width="107" height="17">
+        <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
       </a>
       <form action="#" method="POST">
         <input type="search" placeholder="Поиск:">
@@ -99,7 +99,7 @@
 
     <ul>
       <li>
-        <img src="tovar-1.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <span>30500 Р.</span>
         <span>25500 Р.</span>
@@ -107,16 +107,7 @@
         <button type="submit">В закладки</button>
       </li>
       <li>
-        <img src="tovar-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
-        <h3>Перфоратор BOSCH BFG 6000</h3>
-        <span>30500 Р.</span>
-        <span>25500 Р.</span>
-        <button type="submit">Купить</button>
-        <button type="submit">В закладки</button>
-      </li>
-      <li>
-        <span>New</span>
-        <img src="tovar-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <span>30500 Р.</span>
         <span>25500 Р.</span>
@@ -125,7 +116,16 @@
       </li>
       <li>
         <span>New</span>
-        <img src="tovar-4.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+        <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <h3>Перфоратор BOSCH BFG 6000</h3>
+        <span>30500 Р.</span>
+        <span>25500 Р.</span>
+        <button type="submit">Купить</button>
+        <button type="submit">В закладки</button>
+      </li>
+      <li>
+        <span>New</span>
+        <img src="img/bosch-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
         <h3>Перфоратор BOSCH BFG 3000</h3>
         <span>22500 Р.</span>
         <span>15500 Р.</span>
@@ -133,7 +133,7 @@
         <button type="submit">В закладки</button>
       </li>
       <li>
-        <img src="tovar-5.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <span>30500 Р.</span>
         <span>25500 Р.</span>
@@ -142,7 +142,7 @@
       </li>
       <li>
         <span>New</span>
-        <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+        <img src="img/bosch-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
         <h3>Перфоратор BOSCH BFG 2000</h3>
         <span>12500 Р.</span>
         <button type="submit">Купить</button>
@@ -150,7 +150,7 @@
       </li>
       <li>
         <span>New</span>
-        <img src="tovar-7.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+        <img src="img/bosch-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
         <h3>Перфоратор BOSCH BFG 3000</h3>
         <span>22500 Р.</span>
         <span>15500 Р.</span>
@@ -158,7 +158,7 @@
         <button type="submit">В закладки</button>
       </li>
       <li>
-        <img src="tovar-8.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+        <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <span>30500 Р.</span>
         <span>25500 Р.</span>
@@ -167,7 +167,7 @@
       </li>
       <li>
         <span>New</span>
-        <img src="tovar-6.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+        <img src="img/bosch-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
         <h3>Перфоратор BOSCH BFG 2000</h3>
         <span>12500 Р.</span>
         <button type="submit">Купить</button>
@@ -197,7 +197,7 @@
   <footer>
     <div>
       <div>
-        <img src="#" alt="Логотип Техномарт" width="137" height="22">
+        <img src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
