Добавила остальные изображения

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
     <section>
       <h2>Популярные товары:</h2>
-      <a href="#">все поПулярные товары</a>
+      <a href="#">Все популярные товары</a>
 
       <ul>
         <li>
-          <img src="tovar-1.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164">
+          <img src="img/bosch-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164">
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <span>32500 Р.</span>
           <span>25500 Р.</span>
@@ -113,7 +113,7 @@
         </li>
         <li>
           <span>New</span>
-          <img src="tovar-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+          <img src="img/bosch-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <span>15500 Р.</span>
@@ -121,7 +121,7 @@
           <button type="submit">В закладки</button>
         </li>
         <li>
-          <img src="tovar-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+          <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <span>25500 Р.</span>
@@ -130,7 +130,7 @@
         </li>
         <li>
           <span>New</span>
-          <img src="tovar-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+          <img src="img/bosch-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>12500 Р.</span>
           <button type="submit">Купить</button>
@@ -146,42 +146,42 @@
       <ul>
         <li>
           <a href="#">
-            <img src="bosch.png" alt="BOSCH" width="126" height="37">
+            <img src="img/bosch-logo.png " alt="Логотип компании BOSCH" width="126" height="37">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="Makita.png" alt="Makita" width="123" height="40">
+            <img src="img/makita-logo.png" alt="Логотип компании Makita" width="123" height="40">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="Dewalt.png" alt="DeWALT" width="146" height="44">
+            <img src="img/dewalt-logo.png" alt="Логотип компании DeWALT" width="146" height="44">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="interskol.png" alt="Interskol" width="200" height="88">
+            <img src="img/interskol-logo.png" alt="Логотип компании Interskol" width="200" height="88">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="hitachi.png" alt="Hitachi" width="169" height="31">
+            <img src="img/hitachi-logo.png" alt="Логотип компании Hitachi" width="169" height="31">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="lg.png" alt="LG" width="121" height="73">
+            <img src="img/lg-logo.png" alt="Логотип компании LG" width="121" height="73">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="aeg.png" alt="AEG" width="151" height="96">
+            <img src="img/aeg-logo.png" alt="Логотип компании AEG" width="151" height="96">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="metabo.png" alt="Metabo" width="204" height="69">
+            <img src="img/metabo-logo.png" alt="Логотип компании Metabo" width="204" height="69">
           </a>
         </li>
       </ul>
