--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
           <a href="#">Открыть каталог</a>
         </li>
       </ul>
+      <button type="button"><span class="visually-hidden">Влево</span></button>
+      <button type="button"><span class="visually-hidden">Вправо</span></button>
+      <div>
+        <span class="visually-hidden">Первый слайд</span>
+        <span class="visually-hidden">Второй слайд</span>
+      </div>
 
       <ul>
         <li>
@@ -104,35 +110,35 @@
 
       <ul>
         <li>
-          <img src="img/bosch-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164">
+          <img src="img/bosch-9000.jpg" alt="Бирюзовый перфоратор с длинным сверлом" width="184" height="164">
           <h3>Перфоратор BOSCH BFG 9000</h3>
-          <span>32500 Р.</span>
-          <span>25500 Р.</span>
+          <p><span class="visually-hidden">Старая цена</span>32500 Р.</p>
+          <p><span class="visually-hidden">Новая цена</span>25500 Р.</p>
           <button type="submit">Купить</button>
           <button type="submit">В закладки</button>
         </li>
         <li>
           <span>New</span>
-          <img src="img/bosch-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+          <img src="img/bosch-3000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом" width="127" height="112">
           <h3>Перфоратор BOSCH BFG 3000</h3>
-          <span>22500 Р.</span>
-          <span>15500 Р.</span>
+          <p>15500 Р.</p>
           <button type="submit">Купить</button>
           <button type="submit">В закладки</button>
         </li>
         <li>
-          <img src="img/bosch-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128">
+          <img src="img/bosch-6000.jpg" alt="Бирюзовый перфоратор со сверлом средней длины" width="144" height="128">
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <span>25500 Р.</span>
+          <p><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+          <p><span class="visually-hidden">Новая цена</span>25500 Р.</p>
           <button type="submit">Купить</button>
           <button type="submit">В закладки</button>
         </li>
         <li>
           <span>New</span>
-          <img src="img/bosch-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+          <img src="img/bosch-2000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом и красной кнопкой"
+            width="127" height="112">
           <h3>Перфоратор BOSCH BFG 2000</h3>
-          <span>12500 Р.</span>
+          <p>12500 Р.</p>
           <button type="submit">Купить</button>
           <button type="submit">В закладки</button>
         </li>
@@ -140,7 +146,7 @@
     </section>
 
     <section>
-      <h2>Популярные ПРОИзводители:</h2>
+      <h2>Популярные производители:</h2>
       <a href="#">все производители</a>
 
       <ul>
@@ -261,7 +267,7 @@
           <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
         </a>
       </figure>
-      <button type="button">Заблудились? НапиШИТЕ НАМ!</button>
+      <button type="button">Заблудились? Напишите нам!</button>
     </section>
   </main>
 
@@ -297,9 +303,9 @@
         <p>Все права защищены</p>
       </div>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграмм</a></li>
+        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
       </ul>
       <div>
         <p>Обратная связь:
