--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
   <title>Интернет-магазин Техномарт</title>
   <meta name="description" content="Интернет-магазин строительных материалов и инструментов для ремонта">
   <meta name="keywords" content="инструменты для ремонта, перфораторы, строительные материалы">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <header>
-    <div>
-      <a>
+  <header class="main-header">
+    <div class="header-top">
+      <a class="main-header-logo">
         <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
       </a>
-      <form action="https://echo.htmlacademy.ru" method="get">
-        <input type="search" name="search" placeholder="Поиск:">
-      </form>
-      <a href="#">Закладки: 0</a>
-      <a href="#">Корзина: 0</a>
-      <a href="#">Оформить заказ</a>
+      <div class="header-navigation">
+        <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
+          <input type="search" name="search" placeholder="Поиск:">
+        </form>
+        <a class="header-bookmark" href="#">Закладки: 0</a>
+        <a class="header-cart" href="#">Корзина: 0</a>
+        <a class="header-order" href="#">Оформить заказ</a>
+      </div>
     </div>
 
-    <div>
+    <div class="header-section">
       <p>
         Интернет-магазин
         строительных материалов<br>
@@ -32,12 +39,14 @@
       </p>
       <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="#">Войти</a>
-      <a href="#">Регистрация</a>
+      <div class="user-navigation">
+        <a href="#">Войти</a>
+        <a href="#">Регистрация</a>
+      </div>
     </div>
 
-    <nav>
-      <ul>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
         <li><a>Главная</a></li>
         <li><a href="#">Компания</a></li>
         <li><a href="catalog.html">Каталог</a></li>
@@ -237,45 +246,47 @@
       </ul>
     </section>
 
-    <section>
-      <h2>Компания «Техномарт»</h2>
-      <p>
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
-        ремонта и строительства не оставит равнодушными любителей сэкономить на
-        гастарбайтерах.
-      </p>
-      <p>
-        Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-        Техномарт работает со многими транспортными компаниями:
-      </p>
-      <ul>
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <a href="#">Подробнее о компании</a>
-    </section>
+    <div class="container">
+      <section class="about-company">
+        <h2 class="title">Компания «Техномарт»</h2>
+        <p>
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          ремонта и строительства не оставит равнодушными любителей сэкономить на
+          гастарбайтерах.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul class="about-company-list">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="button" href="#">Подробнее о компании</a>
+      </section>
 
-    <section>
-      <h2>Контакты</h2>
-      <p>
-        Вы можете забрать товар сами,
-        заехав в наш офис:
-      </p>
-      <figure>
-        <a href="#">
-          <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
-        </a>
-      </figure>
-      <button type="button">Заблудились? Напишите нам!</button>
-    </section>
+      <section class="contacts">
+        <h2 class="title">Контакты</h2>
+        <p>
+          Вы можете забрать товар сами,
+          заехав в наш офис:
+        </p>
+        <figure>
+          <a href="#">
+            <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
+          </a>
+        </figure>
+        <button class="button" type="button">Заблудились? Напишите нам!</button>
+      </section>
+    </div>
   </main>
 
-  <footer>
-    <div>
+  <footer class="main-footer">
+    <div class="footer-navigation">
       <div>
-        <img src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
-        <ul>
+        <img class="footer-logo" src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
+        <ul class="footer-navigation-link">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -284,28 +295,33 @@
         </ul>
       </div>
       <div>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p>
-          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         </p>
-        <ul>
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
+        <ul class="footer-navigation-link">
+          <li><a class="categories" href="#">Материалы</a></li>
+          <li><a class="categories" href="#">Техника</a></li>
+          <li><a class="categories" href="#">Инструмент</a></li>
+          <li><a class="categories" href="#">Спецпредложения</a></li>
         </ul>
       </div>
     </div>
 
-    <div>
+    <div class="footer-copyright">
       <div>
         <p>© 2010–2019 Компания «Техномарт»</p>
         <p>Все права защищены</p>
       </div>
-      <ul>
-        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+      <ul class="footer-social">
+        <li class="footer-social-vk">
+          <a href="#"><span class="visually-hidden">Вконтакте</span></a>
+        </li>
+        <li class="footer-social-fb">
+          <a href="#"><span class="visually-hidden">Фейсбук</span></a>
+        </li>
+        <li class="footer-social-insta">
+          <a href="#"><span class="visually-hidden">Инстаграмм</span></a>
+        </li>
       </ul>
       <div>
         <p>Обратная связь:
@@ -320,12 +336,12 @@
     </div>
   </footer>
 
-  <div>
+  <div class="popup-map">
     <!-- Здесь будет карта -->
     <button type="button">Закрыть карту</button>
   </div>
 
-  <div>
+  <div class="popup-feedback">
     <form action="https://echo.htmlacademy.ru" method="post">
       <label>
         Ваше имя:
